custom-workers/kyverno/demo-data/deploy-latest-tag.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latest-deploy
  namespace: default
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: nginx
          image: nginx:latest
