custom-workers/kyverno/demo-data/deploy-with-labels.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-deploy
  namespace: default
  labels:
    app: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: nginx
          image: nginx:1.21
